testdata/baselines/reference/submodule/conformance/symbolProperty55.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
symbolProperty55.ts(2,6): error TS2304: Cannot find name 'Symbol'.
symbolProperty55.ts(6,17): error TS2304: Cannot find name 'SymbolConstructor'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== symbolProperty55.ts (2 errors) ====
    var obj = {
        [Symbol.iterator]: 0
         ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
    };
    
    module M {
        var Symbol: SymbolConstructor;
                    ~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'SymbolConstructor'.
        // The following should be of type 'any'. This is because even though obj has a property keyed by Symbol.iterator,
        // the key passed in here is the *wrong* Symbol.iterator. It is not the iterator property of the global Symbol.
        obj[Symbol.iterator];
    }